# unify-batch

./: .gitignore  README.md
.run/: Unify.run.xml  unpack.run.xml
Diva Unifier/: CMakeLists.txt  Diva_Unifier.jucer
Diva Unifier/Assets/: One Diva Layer.unify  One Diva Layer.xml
Diva Unifier/Source/: PatchConverter.cpp  PatchConverter.h
Dune 3 VST3 Converter/Source/: PatchConverter.cpp
FXP Unifier/: CMakeLists.txt  FXP Unifier.jucer
FXP Unifier/Source/: FXP_Unifier.cpp  impOSCar2_Unifier.cpp
GForce XML Unifiers/: GForce_XML_Unifier.jucer
GForce XML Unifiers/Source/: PatchConverter.cpp
Kasm Unifer/: CMakeLists.txt  README.md
Kasm Unifer/Source/: PatchConverter.cpp  PatchConverter.h
Kasm Unifier/: CMakeLists.txt  Kasm_Unifier.jucer
Kasm Unifier/JuceLibraryCode/: AppConfig.h  BinaryData.h  BinaryData2.cpp  JuceHeader.h
Kasm Unifier/Patches/: Kasm Arturia Acid V Factory Presets.guru  Kasm Batallion Factor Presets.guru  Kasm Batallion Factory Presets.guru  Kasm Decent Sampler Factory Presets.guru  Kasm HALion7.guru  Kasm Kontakt.guru  Kasm LION Factory Presets.guru  Kasm Lush2 Factory Presets.guru  Kasm Massive X Factory Presets.guru  Kasm Serum Factory Presets.guru  Kasm Softube Modular Factory Presets.guru  Kasm Spire Factory Presets.guru  Kasm Sylenth1 Factory Presets.guru  Kasm Twin3 Factory Presets.guru  Kasm UVIWorkstation Factory Presets.guru  Kasm VItal Factory Presets.guru  Kasm Voltage Modular.guru  Kasm u-he Diva Factory Presets.guru
Kasm Unifier/Source/: MainComponent.cpp  PatchConverter.cpp  PatchConverter.h
Kasm Unifier/VST/: Kasm.aupreset  Kasm.vstpreset
Lush-2 Unifier/Source/: PatchConverter.cpp
OP-X PRO-3 Unifier/Source/: MainComponent.cpp  PatchConverter.cpp
PatchAnalyzer/: PatchAnalyzer.jucer
Patches/: Kasm HALion7.guru  Kasm Lush2 Factory Presets.guru  Kasm Massive X Factory Presets.guru  Kasm Serum Factory Presets.guru  Kasm Sylenth1 Factory Presets.guru  Kasm UVIWorkstation Factory Presets.guru  Kasm VItal Factory Presets.guru  Kasm impOSCar2 Factory Presets.guru  Kasm u-he Diva Factory Presets.guru
Patches/AnimoogZ/: Kevs Animoog.aupreset
Patches/Diva/: Kevs Swishy Unify.xml  Kevs Swishy.aupreset
Patches/Kasm Kevs/: Kevs Choir Blokes.aupreset  Kevs Choir Blokes.unify  Kevs Harpsi Chord Delay M1.unify  Kevs Inst Arturia Pigments Synth.unify  Kevs Lush2 Arp Driver.unify  Kevs Organy Plucks.unify  Kevs Serum Chariots Unison.unify  Kevs Swirley.aupreset  Kevs Swirley.unify  Kevs miRack Test.aupreset  Kevs miRack Test.unify  Vienna Piano Arp with Delay.unify
Patches/Kasm Pigments Factory Presets/: 2 Sharp.unify  5th Sweep.unify  8-Bit Crystals.unify  90 Soft Rave Sequence.unify  Abandoned Bunker.unify  Acid Mouth.unify  Advanced 6-9.unify  Afterlife.unify  Aggrestab.unify  Alarm.unify  Alhambra.unify  Alone Nowhere.unify  Analog Triple VCO.unify  Angry Picker.unify  Ants Chords.unify  Arcalogue.unify  Artefax.unify  ArtuD2.unify  Ascending EP.unify  Astral Bell.unify  Atlantis.unify  Avalon Strings.unify  Back Then.unify  Back To School.unify  Bamboo And Water.unify  Baritone Sax.unify  BassFingers.unify  Bassnappy.unify  Bellissima.unify  Bent Cassette Strings.unify  Binary Arp.unify  Biology Class.unify  Blasting Pixels.unify  Blocky Grooves.unify  (+307 more)
Synth1 Unifier/: Synth1 Unifier.jucer
TAL Unifier/: TAL Unifier.jucer
Unify/: KEvs Brass.unify  KEvs Brass.xml  Kevs Distant.unify  Kevs Distant.xml  Kevs Numerology Plucky.xml  Kevs Oh Yeah.unify  Kevs Oh Yeah.xml  Kevs Second L1.unify  Kevs Second L1.xml  Kevs Second L2.xml  Kevs Unify Mix.unify  Kevs miRack Test.unify  Kevs miRack Test.xml
Utilities/: batch-unpack.py
VST2_SDK/: README.md
(+9900 files in other folders)
